site/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: crypto-hound
spec:
  type: ClusterIP
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
